@@ -633,30 +633,6 @@ name|QUEUE_OPERATION
 init|=
 literal|"operation"
 decl_stmt|;
-comment|/**    * @deprecated use {@link org.apache.solr.common.params.CollectionParams.CollectionAction#DELETE}    */
-annotation|@
-name|Deprecated
-DECL|field|REMOVECOLLECTION
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|REMOVECOLLECTION
-init|=
-literal|"removecollection"
-decl_stmt|;
-comment|/**    * @deprecated use {@link org.apache.solr.common.params.CollectionParams.CollectionAction#DELETESHARD}    */
-annotation|@
-name|Deprecated
-DECL|field|REMOVESHARD
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|REMOVESHARD
-init|=
-literal|"removeshard"
-decl_stmt|;
 DECL|field|STATE_UPDATE_DELAY
 specifier|public
 specifier|static
@@ -2247,10 +2223,27 @@ decl_stmt|;
 if|if
 condition|(
 name|overseerAction
-operator|!=
+operator|==
 literal|null
 condition|)
 block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"unknown operation:"
+operator|+
+name|operation
+operator|+
+literal|" contents:"
+operator|+
+name|message
+operator|.
+name|getProperties
+argument_list|()
+argument_list|)
+throw|;
+block|}
 switch|switch
 condition|(
 name|overseerAction
@@ -2435,91 +2428,6 @@ name|getProperties
 argument_list|()
 argument_list|)
 throw|;
-block|}
-block|}
-else|else
-block|{
-comment|// merely for back-compat where overseer action names were different from the ones
-comment|// specified in CollectionAction. See SOLR-6115. Remove this in 5.0
-switch|switch
-condition|(
-name|operation
-condition|)
-block|{
-case|case
-name|OverseerCollectionProcessor
-operator|.
-name|CREATECOLLECTION
-case|:
-return|return
-operator|new
-name|ClusterStateMutator
-argument_list|(
-name|getZkStateReader
-argument_list|()
-argument_list|)
-operator|.
-name|createCollection
-argument_list|(
-name|clusterState
-argument_list|,
-name|message
-argument_list|)
-return|;
-case|case
-name|REMOVECOLLECTION
-case|:
-return|return
-operator|new
-name|ClusterStateMutator
-argument_list|(
-name|getZkStateReader
-argument_list|()
-argument_list|)
-operator|.
-name|deleteCollection
-argument_list|(
-name|clusterState
-argument_list|,
-name|message
-argument_list|)
-return|;
-case|case
-name|REMOVESHARD
-case|:
-return|return
-operator|new
-name|CollectionMutator
-argument_list|(
-name|getZkStateReader
-argument_list|()
-argument_list|)
-operator|.
-name|deleteShard
-argument_list|(
-name|clusterState
-argument_list|,
-name|message
-argument_list|)
-return|;
-default|default:
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"unknown operation:"
-operator|+
-name|operation
-operator|+
-literal|" contents:"
-operator|+
-name|message
-operator|.
-name|getProperties
-argument_list|()
-argument_list|)
-throw|;
-block|}
 block|}
 block|}
 return|return
