@@ -1464,42 +1464,6 @@ name|CREATE_NODE_SET
 init|=
 literal|"createNodeSet"
 decl_stmt|;
-comment|/**    * @deprecated use {@link org.apache.solr.common.params.CollectionParams.CollectionAction#DELETE}    */
-annotation|@
-name|Deprecated
-DECL|field|DELETECOLLECTION
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|DELETECOLLECTION
-init|=
-literal|"deletecollection"
-decl_stmt|;
-comment|/**    * @deprecated use {@link org.apache.solr.common.params.CollectionParams.CollectionAction#CREATE}    */
-annotation|@
-name|Deprecated
-DECL|field|CREATECOLLECTION
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|CREATECOLLECTION
-init|=
-literal|"createcollection"
-decl_stmt|;
-comment|/**    * @deprecated use {@link org.apache.solr.common.params.CollectionParams.CollectionAction#RELOAD}    */
-annotation|@
-name|Deprecated
-DECL|field|RELOADCOLLECTION
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|RELOADCOLLECTION
-init|=
-literal|"reloadcollection"
-decl_stmt|;
 DECL|field|ROUTER
 specifier|public
 specifier|static
@@ -3996,85 +3960,6 @@ operator|==
 literal|null
 condition|)
 block|{
-comment|// back-compat because we used strings different than enum values before SOLR-6115
-switch|switch
-condition|(
-name|operation
-condition|)
-block|{
-case|case
-name|CREATECOLLECTION
-case|:
-name|createCollection
-argument_list|(
-name|zkStateReader
-operator|.
-name|getClusterState
-argument_list|()
-argument_list|,
-name|message
-argument_list|,
-name|results
-argument_list|)
-expr_stmt|;
-break|break;
-case|case
-name|DELETECOLLECTION
-case|:
-name|deleteCollection
-argument_list|(
-name|message
-argument_list|,
-name|results
-argument_list|)
-expr_stmt|;
-break|break;
-case|case
-name|RELOADCOLLECTION
-case|:
-name|ModifiableSolrParams
-name|params
-init|=
-operator|new
-name|ModifiableSolrParams
-argument_list|()
-decl_stmt|;
-name|params
-operator|.
-name|set
-argument_list|(
-name|CoreAdminParams
-operator|.
-name|ACTION
-argument_list|,
-name|CoreAdminAction
-operator|.
-name|RELOAD
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|collectionCmd
-argument_list|(
-name|zkStateReader
-operator|.
-name|getClusterState
-argument_list|()
-argument_list|,
-name|message
-argument_list|,
-name|params
-argument_list|,
-name|results
-argument_list|,
-name|ZkStateReader
-operator|.
-name|ACTIVE
-argument_list|)
-expr_stmt|;
-break|break;
-default|default:
 throw|throw
 operator|new
 name|SolrException
@@ -4089,9 +3974,6 @@ name|operation
 argument_list|)
 throw|;
 block|}
-block|}
-else|else
-block|{
 switch|switch
 condition|(
 name|action
@@ -4392,7 +4274,6 @@ operator|+
 name|operation
 argument_list|)
 throw|;
-block|}
 block|}
 block|}
 catch|catch
